# NotiBot

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.override.yml  docker-compose.yml  skills-lock.json
Doc/: NotiBot.md
PreProcesamiento/: grafico1_normalizacion.py
Scraper/: ElComercioScraper.py  README.md  larepublica_scraper.py  lima_callao_news_20260418_220206.json  lima_callao_news_20260422_205854.json  lima_callao_news_scraper.py  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9f8b399cbdd8_baseline.py
backend/src/: main.py
backend/src/admin/: analytics_router.py  backup_router.py  backup_service.py  fuentes_router.py  noticias_router.py  pipeline_router.py  router.py  schemas.py  scraping_router.py  stats_router.py  vectores_router.py
backend/src/analytics/: schemas.py  service.py
backend/src/api/: router.py
backend/src/api/services/: news_service.py
backend/src/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/core/: config.py  database.py  utils.py
backend/src/models/: __init__.py  fuentes.py  noticias.py  others.py  pipeline.py
backend/src/pipeline/: chunker.py  processor.py
backend/src/rag/: router.py
backend/src/rag/services/: search_service.py
backend/src/scraper/: category_inference.py  classifier.py  db_writer.py  main.py  models.py
backend/src/scraper/sources/: _arc_rss.py  correo.py  elcomercio.py  gestion.py  larazon.py  ojo.py  peru21.py  trome.py
backend/src/vectores/: embedder.py
docs/: NotiBot.md  (+1 more)
(+52 files in other folders)
